--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>Título Grande</h1>
-<p>Um texto</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <img src="" alt="logo esports nlw">
+    </header>   
+</body>
+</html>
