--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>eSports</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo esports nlw">
+        <img src="./assets/logo-nlw-esports.svg" alt="logo esports nlw"/>
     </header>   
+
+    <main>
+        <section>
+                <div>
+            <h2 class="title">Assistente de Meta</h2>
+            <p>Pergunte sobre estrategias, build e dicas para seus jogos !!</p>
+            <form id="form">
+                <input id="ApiKey" type="password" placeholder="Informe a API KEY do Gemini" required>
+                <select id="gameSelect">
+                    <option value="">Selecione um Jogo</option>
+                    <option value="Valorant">Valorant</option>
+                    <option value="LOL">League of Legends</option>
+                    <option value="CS:GO">CS:GO</option>
+                </select>
+                <input id="questionInput" type="text", placeholder="Melhor Build para ADC...">
+                <button id="askButton">
+                    Perguntar 
+                </button>
+            </form>
+
+            <div id="aiResponse">
+                <div class="response-content">
+
+                </div>
+            </div>
+        </div>
+    </section>
+        
+    </main>
+    <script src="./script.js">
+
+    </script>
 </body>
 </html>
