--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eSports</title>
+    <link rel="icon" type="image/png" href="./assets/favicon-192x192.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
