--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <option value="Valorant">Valorant</option>
                     <option value="LOL">League of Legends</option>
                     <option value="CS:GO">CS:GO</option>
+                    <option value="Street Fight">Street Fight</option>
                 </select>
                 <input id="questionInput" type="text", placeholder="Melhor Build para ADC...">
                 <button id="askButton">
